# digital_liver

./: .gitignore  AUDIT_REPORT.md  DECISIONS.md  README.md  clinical_metrics.py  compare.py  coupling.py  data.py  demo.html  derived.py  diagnose_latent.py  ensemble_forecast.py  eval.py  eval_mdn.py  explain.py  explain_jepa.py  export_demo_data.py  figures_showcase.py  generator.py  jepa_augmented.py  jepa_denoise.py  jepa_substrate.py  jepa_sweep.py  jepa_variants.py  latent_forecast.py  make_training_curves.py  manifold_critic.py  mdn_forecast.py  memo.md  memo.tex  missing_visits.py  noise_robustness.py  predict_demo.py  probe_metrics.py  pyproject.toml  smooth_head_test.py  test_invariants.py  train.py  train_history.py  train_jepa.py  (+6 more)
checkpoints/: baseline.pt  history.pt  jepa.pt  mdn.pt
figures/: arch_constraint_head.dot  arch_denoised_anchor.dot  arch_tsjepa.dot
models/: baseline.py  constraints.py  distributional_head.py  history.py  jepa.py
